Fixed an issue with fixed width nav btns. Added text overflow management. Main container can now only overflow vertically. Updated nav button horizontal padding.

--- a/resources/dynamic/styles.css
+++ b/resources/dynamic/styles.css
@@ -83,7 +83,7 @@ body {
 .askiaquestions, footer {
     background-color: rgba({%= WhiteColor.ToRGB() %},0.3);
 }
-footer {   
+footer {
     border-top: {%= BorderWidth %} solid rgba({%= WhiteColor.ToRGB() %},0.3);
 }
 {% If CurrentADP.Var("display_next") = "no" Then %}
@@ -150,7 +150,7 @@ header.fixed {
     width: {%= (Interview.Progress * (6/100)).ToString().Replace(",",".") %}em;
   }
 }
-.askiaquestions {  
+.askiaquestions {
     border-radius: {%= BorderRadius %};
     padding: {%= VPadding %} {%= HPadding %};
     margin: 0 auto {%= VPadding %} auto;
@@ -230,17 +230,17 @@ header.fixed {
 }
 {% EndIf %}
 .askia-grid-header .askia-response:hover {
-    background-color : transparent; 
+    background-color : transparent;
 }
 .btn {
     font-family: {%= FontFamily %};
     font-size: {%= NormalFS %};
     border-radius: {%= BorderRadius %};
-    padding: {%= VPadding %} 0;
+    padding: {%= VPadding %} {%= HPadding %};
     box-shadow: 0 2px 5px rgba({%= BlackColor.ToRGB() %}, 0.3);
 }
 .btn:after {
-    box-shadow: inset 0 0 0 5em rgba({%= WhiteColor.ToRGB() %}, 0.5);   
+    box-shadow: inset 0 0 0 5em rgba({%= WhiteColor.ToRGB() %}, 0.5);
 }
 .btn:hover {
     box-shadow: 0 2px 8px rgba({%= BlackColor.ToRGB() %}, 0.6);
