--- a/resources/static/styles.css
+++ b/resources/static/styles.css
@@ -159,7 +159,8 @@ header.fixed h2 {
   order: 2;
   flex: 1 1 60vh;
   align-self: center;
-  overflow: visible;
+  overflow-y: visible;
+  overflow-x: hidden;
 }
 
 /* QUESTION CAPTION */
@@ -386,13 +387,15 @@ textarea {
 .btn {
   cursor: pointer;
   position: relative;
-  width: 5.5em;
+  max-width: 11em;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
   border: none;
   -webkit-background-clip: padding-box;
   -moz-background-clip: padding;
   background-clip: padding-box;
   margin: .4em;
-  overflow: hidden;
   -webkit-appearance: none;
   transition: all .3s cubic-bezier(.25, .1, .25, .1);
 }
